# nodetunnel-godot-plugin

./: .gitignore  README.md  build.bat  build.sh  project.godot
.github/workflows/: build.yml
addons/nodetunnel/: NodeTunnel.gdextension  NodeTunnel.gdextension.uid  nodetunnel.gd  nodetunnel.gd.uid  plugin.cfg  relay_discovery.gd  relay_discovery.gd.uid  room_info.gd  room_info.gd.uid  setup.gd
examples/minimal/: NodeTunnel.gdextension.uid  icon.svg.import  project.godot  response_time.tscn
examples/minimal/addons/: nodetunnel
examples/minimal/demo/: multiplayer.gd  multiplayer.gd.uid  node_tunnel_demo.gd  node_tunnel_demo.tscn  player.gd  player.tscn  player_spawner.gd  player_spawner.gd.uid  response_time.gd  response_time.gd.uid
examples/minimal/demo/connection_menu/: connection_manager.gd  connection_manager.gd.uid  main_menu.gd.uid  main_menu.tscn  room_info.gd  room_info.gd.uid  room_info.tscn  room_list.gd  room_list.gd.uid
godot/demo/: node_tunnel_demo.gd  node_tunnel_demo.tscn  player.gd  player.gd.uid
rust/src/: lib.rs  node_tunnel_config.rs  node_tunnel_peer.rs  packet_type.rs  relay_client.rs  renet_packet_peer.rs
rust/src/relay_client/: client.rs
src/: Cargo.toml
src/src/: lib.rs  node_tunnel_peer.rs
src/src/protocol/: error.rs  mod.rs  packet.rs  serialize.rs  version.rs
src/src/relay_client/: client.rs  error.rs  events.rs
src/src/transport/: client.rs  error.rs  mod.rs  renet.rs  server.rs  types.rs
