[package]
name = "nodetunnel"
version = "0.1.0"
edition = "2024"

[lib]
name = "nodetunnel"
crate-type = ["cdylib"]

[dependencies]
nodetunnel-protocol = { git = "https://github.com/gdoykk/nodetunnel-protocol.git" }
godot = { version = "0.5.4", features = ["api-4-7"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
paperudp = { git = "https://github.com/gdoykk/nodetunnel-paperudp.git" }
